# The-evolution-of-Todo-App

./: .gitignore  CLAUDE.md  backend.md  infrastructure.md  package-lock.json  ui-ux.md
.claude/: settings.json
.claude/agents/: backend.md  infrastructure.md  ui-ux.md
.claude/skills/: backend-create-auth.md  backend-create-endpoint.md  backend-create-model.md  backend-create-repository.md  backend-create-service.md  ui-create-component.md  ui-create-form.md  ui-create-layout.md
.specify/: BACKEND.md  INFRASTRUCTURE.md  README.md  UI-UX-UPDATES.md  UI-UX.md
.specify/memory/: constitution.md
.specify/scripts/bash/: create-phr.sh
.specify/scripts/validation/: validate-workflow.sh
apps/001-console-todo/: README.md  pyproject.toml
apps/001-console-todo/src/: __init__.py  exceptions.py
apps/001-console-todo/src/adapters/cli/: console_adapter.py  menu_system.py
apps/001-console-todo/src/adapters/storage/: in_memory_storage.py
apps/001-console-todo/src/domain/entities/: __init__.py  task.py
apps/001-console-todo/src/domain/ports/: task_output_port.py
apps/001-console-todo/src/domain/services/: __init__.py  todo_service.py
apps/001-console-todo/tests/unit/adapters/: test_menu_system.py
apps/001-console-todo/tests/unit/domain/: test_priority.py  test_todo_service.py
apps/002-fullstack-web/: README.md  completion_status.md
apps/002-fullstack-web/backend/: .env.example  pyproject.toml
apps/002-fullstack-web/backend/src/: main.py
apps/002-fullstack-web/backend/src/adapters/api/: __init__.py  auth_routes.py  task_routes.py
apps/002-fullstack-web/backend/src/adapters/db/: session.py  task_repository.py  user_repository.py
apps/002-fullstack-web/backend/src/adapters/security/: jwt.py  password.py
apps/002-fullstack-web/backend/src/domain/: exceptions.py
apps/002-fullstack-web/backend/src/domain/entities/: priority.py  task_status.py  user.py
apps/002-fullstack-web/backend/src/domain/ports/: task_input_port.py  user_repository_port.py
apps/002-fullstack-web/backend/src/domain/services/: auth_service.py  todo_service.py
apps/002-fullstack-web/backend/tests/integration/: test_auth.py  test_tasks.py
apps/002-fullstack-web/backend/tests/unit/domain/: test_task.py  test_user.py
apps/002-fullstack-web/frontend/: next.config.ts  package-lock.json  package.json
apps/src/services/: api_client.ts
specs/001-console-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fullstack-web/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  ui-enhancement-tasks.md
src/: main.py
src/adapters/: __init__.py
src/domain/: __init__.py
tests/: conftest.py
(+42 files in other folders)
